--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,8 +1,6 @@
 $primary: #8064A2;
 $secondary: #5587d1; 
 $success:#77933C;
-$denger:#C0504D;
+$denger:rgba(234, 100, 22, 0.765);
 
-@import "../node_modules/bootstrap/scss/bootstrap";
-
-// Then add additional custom code here
+@import "../node_modules/bootstrap/scss/bootstrap"
