--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,6 @@
 $primary: #8064A2;
 $secondary: #5587d1; 
 $success:#77933C;
-$denger:rgba(234, 100, 22, 0.765);
+$danger:rgba(255, 68, 0, 0.601);
 
 @import "../node_modules/bootstrap/scss/bootstrap"
